--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link href="/styles/style.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="https://nesmaps.com/maps/Arkanoid/sprites/Laser.gif" type="image/x-icon">
     <title>Arkanoid Ironhack Game</title>
   </head>
   <body>
@@ -16,6 +17,7 @@
 	
 			<canvas id="game" width="600px" height="350px">
 		</div>
+    <script src="/js/constants.js"></script>
     <script src="/js/paddle.js"></script>
     <script src="/js/brick.js"></script>
     <script src="/js/ball.js"></script>
