--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			<canvas id="game" width="600px" height="350px">
 		</div>
     <script src="/js/constants.js"></script>
+    <script src="/js/background.js"></script>
     <script src="/js/paddle.js"></script>
     <script src="/js/brick.js"></script>
     <script src="/js/ball.js"></script>
