--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="/js/background.js"></script>
     <script src="/js/paddle.js"></script>
     <script src="/js/brick.js"></script>
+    <script src="/js/brickwall.js"></script>
     <script src="/js/ball.js"></script>
     <script src="/js/game.js"></script>
     <script src="/js/script.js"></script>
